[package]
name = "query_bundler"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true

exclude = [
  "artifacts/*",
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
schemars.workspace = true
serde.workspace = true
cw-storage-plus.workspace = true

# cw-uuid = { path = "../../packages/cw-uuid" }
cw2 = "1.0.1"
thiserror = { version = "1.0.38" }
serde_json = "1.0.93"
cw721 = "0.17.0"
