[package]
name = "query_bundler"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
exclude = [
  "artifacts/*",
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
backtraces = ["cosmwasm-std/backtraces"]
# library = []

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
schemars.workspace = true
serde.workspace = true
cw-storage-plus.workspace = true

cw2 = "1.0.1"
thiserror = { version = "1.0.38" }
serde_json = "1.0.93"
cw721 = "0.17.0"
cw721-base = "0.17.0"
serde-cw-value = "0.7.0"
serde-json-wasm = "0.5.1"
cw721-metadata-onchain = "0.15.0"
cw20 = "1.1.0"
